imp: updated swagger for task list
